# streamvis

./: .gitignore  .travis.yml  README.md  make_release.py  pyproject.toml  setup.py
.github/workflows/: deployment.yaml
alvra-pilot/: helpers.py  main.py
apps/alvra/: main.py  receiver.py
apps/alvra-16m/: main.py  receiver.py
apps/alvra-pilot/: main.py
apps/base/: helpers.py  main.py  receiver.py  server_lifecycle.py
apps/base-16m/: main.py  receiver.py
apps/base-exp/: main.py  receiver.py
apps/bernina/: main.py  receiver.py  server_lifecycle.py
apps/bernina-pilot/: main.py
apps/experimental/: main.py
bernina-pilot/: server_lifecycle.py
conda-recipe/: build.sh  meta.yaml
docker/: Dockerfile  docker-compose.debug.yml  docker-compose.yml  streamvis.service
live_image_vis/: helpers.py  main.py
streamvis/: __init__.py  cbd_statistic_tools.py  cli.py  colormapper.py  disabled_modules.py  handler.py  helpers.py  histogram.py  hitrate.py  image_plot.py  image_processor.py  image_view.py  input_control.py  intensity_roi.py  jf_adapter.py  jfcbd_adapter.py  jfcbd_statistics_handler.py  jfjoch_adapter.py  marker.py  mask.py  metadata.py  progress_bar.py  projection.py  receiver.py  resolution_rings.py  roi_intensities.py  runtime.py  saturated_pixels.py  scatter_plot.py  spots.py  statistics.py  statistics_handler.py  statistics_tools.py  streaks.py  stream_graph.py  streamvis.py  trajectory_plot.py
streamvis/apps/: alvra.py  base.py  base16m.py  bernina.py  cbd.py  default.py  default16m.py  experimental.py  large.py  module.py  square.py  swissmx.py  von_hamos.py
streamvis/apps/alvra/: main.py  receiver.py  server_lifecycle.py
streamvis/apps/base/: main.py  receiver.py  server_lifecycle.py
streamvis/apps/base-16m/: receiver.py
streamvis/apps/base16m/: main.py  receiver.py  server_lifecycle.py  statistics.py
streamvis/apps/bernina/: main.py  receiver.py
streamvis/apps/experimental/: main.py
streamvis/auxiliary_apps/: cbd_stats.py  roi_intensities.py  roi_projections.py  roi_pump_probe.py  statistics.py
streamvis/common_apps/: cbd_stats.py  hitrate.py  radial_profile.py  roi_intensities.py  roi_projections.py  roi_pump_probe.py  statistics.py
tests/: test_cli.py  test_colormapper.py  test_histogram.py  test_image_plot.py  test_metadata.py  zmq_sender.py
